<resources>
    <string name="myapp">Создано с помощью приложения ВЫБЕРИ ЩЕНКА</string>
    <string name="maybithisbreed">Может быть, мне завести собаку вот такой породы?</string>
    <string name="nopicaded">Данные будут отправлены без изображения. Чтобы это изменить, предоставьте приложению разрешение в разделе "Хранилище"</string>
    <string name="startscreendecription">Выбор домашнего питомца - ответственный и волнующий момент! Давайте пройдем этот путь вместе и найдем единственного и неповторимого - только Вашего - щенка!</string>
    <string name="startscreenbutton">НАЧАТЬ</string>
    <string name="no">нет</string>
    <string name="yes">да</string>
    <string name="say_me_age">Чтобы правильно выбрать для Вас щенка оптимальной породы, пройдите несколько несложных раундов вопросов. Выбирайте тему ниже в любой последовательности. Чем больше ответов, тем выше точность рекомендаций.</string>
    <string name="flag_opt1">компаньон для детей</string>
    <string name="flag_opt2">просто для компании</string>
    <string name="flag_opt3">пробежек по утрам, трекинга</string>
    <string name="flag_opt4">охотиться</string>
    <string name="flag_opt5">для соревнований по послушанию</string>
    <string name="flag_opt6">для охраны территории</string>
    <string name="flag_opt7">для защитной службы, ЗКС</string>
    <string name="flag_opt8">для соревнований по agility</string>
    <string name="btn_block1">Точный подбор (рекомендуется)</string>
    <string name="btn_block2">По назначению (не рекомендуется)</string>
    <string name="btn_block3">По внешнему виду (не рекомендуется)</string>
    <string name="btn_block4">Весь лист пород</string>
    <string name="btn_opt2">Дальше</string>
    <string name="btn_complete">Готово!</string>
    <string name="resultText"></string>
    <string name="no_data">ошибка загрузки</string>
    <string name="intro_about_owner_activity">При выборе собаки, очень важно понимать Ваши возможности. Для этого ответьте на вопросы ниже</string>
    <string name="intro_about_for_what_activity">Разные породы собак лучше подходят для разных занятий. Выберите - для чего, главным образом, вы берете собаку?
    Обратите внимание, что некоторые варианты могут противоречить друг-другу</string>
    <string name="intro_about_infrastructure">Для некоторых пород очень важно - какие окружающие условия Вы им обеспечите.</string>
    <string name="intro_about_morpho">Ваша собака должна приносить Вам эстетическое удовольствие</string>
    <string name="action_save">сохранить профиль ответов</string>
    <string name="action_email">поделиться результатом по e-mail</string>
    <string name="action_settings">настройки</string>
    <string name="action_garbage">Сбросить ответы</string>
    <string name="action_share">Поделиться</string>
    <string name="send_to">Отправить</string>
    <string name="drawer_open">Открыт</string>
    <string name="drawer_closed">Закрыт</string>
    <string name="obidience">Послушание и обучаемость</string>
    <string name="guard">Охранные качества</string>
    <string name="disabled_button">Вы уже отвечали на эти вопросы. Чтобы начать заново используйте значок КОРЗИНА</string>
    <string name="disabled_button_short">Вы уже отвечали на эти вопросы</string>
    <string name="flag_havedog">отметьте, если уже есть собака(и)</string>
    <string name="flag_havepet">отметьте, если есть некрупные питомцы, птицы</string>
    <string name="flag_havechild">отметьте, если есть дети младше 6</string>
    <string name="flag_noalergy">только с гипоаллергенной шерстью</string>
    <string name="find_breed">Найти породу</string>
    <string name="mesage_to_devs">Написать разработчикам</string>
    <string name="about">Справка</string>
    <string name="resofsearch">ПОДРОБНО</string>
    <string name="starttoast">СОВЕТ:Чем подробнее ответы, тем точнее будет подбор породы</string>
    <string name="sharetoast">Вы сможете поделиться выбрав конкретную породу</string>
    <string name="status">Точность подбора породы (зависит от количества отвеченных вопросов)</string>
    <string name="no_breed_found">Ни одной породы, соответствующей условиям, не найдено. Попробуйте ответить на большее количество вопросов.</string>
    <string name="params">Значения подбора</string>
    <string name="email_adress">eyesless.devtest@gmail.com</string>
    <string name="email_subj">О программе ВЫБЕРИ ЩЕНКА</string>
    <string name="project_adress">https://github.com/kalininaleksandrv/NeedMyPuppyRelease_v_0.1</string>
    <string name="about_app">Приложение ВЫБЕРИ ЩЕНКА является некоммерческим проектом с
        открытым исходным кодом, цель которого повысить качество жизни собак и их хозяев за счет
        более осознанного подхода к выбору породы. Разработано Eyesless.dev.
        Приложение находится в стадии альфа-теста (текущая версия alpha 0.0.1).
        Приложение не может являться основанием для принятия или непринятия каких-либо решений.
        Используя Приложение Вы соглашаетесь, что разработчики не несут никакой ответственности за любые
        обстоятельства прямо или косвенно последовавшие в результате использования Приложения.
        Содержание доступно по лицензии CC BY-SA 3.0 https://creativecommons.org/licenses/by-sa/3.0/</string>
    <string name="linktogit">Посетить наш репозиторий на GitHub</string>
    <string name="nofunc">Этот функционал будет реализован в одной из следующих версий приложения</string>
    <string name="onyourasq">По Вашему запросу найдены: </string>
    <string name="andmore">и еще </string>
    <string name="nosuchactivity">не найдено приложение для этого действия</string>
    <string name="foralllist">Чтобы посмотреть все породы нажмите ЗНАЧОК ПОИСКА при пустой строке</string>
    <string name="catchem">Кого ловим?</string>
    <string name="externallink">Подробности в Интернете (перейти)</string>
    <string name="addrare">Включить в подборку редкие породы</string>
    <string name="arnaud">pic. by www.flickr.com/people/arnaudcamel</string>
    <string name="instruct">Покупка щенка</string>
    <string name="titlebuy">На этой странице пока нет предложений о продаже, зато тут есть пара хороших советов, как купить правильного щенка, если Вы уже выбрали породу</string>
    <string name="descrbuy_one">Главное. Настоятельно советуем воздержаться от покупки щенков на птичьих рынках,
        щенячьих фабриках (pet-fabriс) и прочих местах где на первом месте "звонкая монета".</string>
    <string name="descrbuy_two">Сначала соберите максимум информации по выбранной породе (ниже есть подсказки - где можно посмотреть) и еще раз прикиньте все "за и против". помните - собаки живут по 10-15 лет.
        Покупка щенка - очень ответственный шаг. Далее постарайтесь найти хороших заводчиков, желательно по рекомендации породного клуба или форума,
        не забудьте проверить "черные листы" недобросовестных продавцов и так далее.</string>
    <string name="descrbuy_three"> Не старайтесь купить щенка "к следующему понедельнику"
        - хорошие щенки могут быть редкостью, может быть, придется подождать "в очереди". Обязательно пообщайтесь с заводчиком о покупке щенка,
        выслушайте все рекомендации, узнайте специфические "подводные камни" по этой породе. Наградой за правильный выбор будет море положительных
        эмоций, позитива и тепла, которые подарит Ваш новый преданный друг.
    </string>
    <string name="nomore3">Укажите не более 3х вариантов</string>
    <string name="tostartagain">ПОДСКАЗКА: Чтобы сбросить результаты и начать заново - нажмите на корзину</string>



</resources>
