<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.eyesless.needmypuppy.StartScreen">

    <TextView
        android:id="@+id/textView"
        android:gravity="center"
        android:text="@string/startscreendecription"
        android:textSize="@dimen/text_size"
        android:layout_width="wrap_content"
        app:layout_constraintHeight_default="spread"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        app:layout_constraintHeight_default="spread"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/startscreen_puppy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/medium_dog"
        android:text="@string/startscreenbutton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.488" />

    <TextView
        android:id="@+id/textView_arnaud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arnaud"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

</android.support.constraint.ConstraintLayout>
