<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.eyesless.needmypuppy.MainActivity">

    <TextView
        android:id="@+id/textView_top"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="wrap"
        android:layout_height="wrap_content"
        android:text="@string/intro_about_infrastructure"
        android:textSize="@dimen/text_size"
        android:gravity="center"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_walking" />

    <Spinner
        android:id="@+id/spinner_walking"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="spread"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/spinner_cynologist"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@+id/textView_top" />

    <Spinner
        android:id="@+id/spinner_cynologist"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="spread"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/spinner_vet"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@+id/spinner_walking" />

    <Spinner
        android:id="@+id/spinner_vet"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="spread"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_havechild"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@+id/spinner_cynologist" />

    <CheckBox
        android:id="@+id/checkBox_havedog"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="wrap"
        android:layout_height="wrap_content"
        android:text="@string/flag_havedog"
        android:textSize="@dimen/text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="320dp"
        app:layout_constraintBottom_toTopOf="@+id/button_complete"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_havechild" />

    <CheckBox
        android:id="@+id/checkBox_havechild"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="wrap"
        android:layout_height="wrap_content"
        android:text="@string/flag_havechild"
        android:textSize="@dimen/text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_havedog"
        app:layout_constraintTop_toBottomOf="@+id/spinner_vet"
        android:layout_marginLeft="8dp" />

    <ImageButton
        android:id="@+id/button_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_complete"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/forward"
        android:layout_marginEnd="8dp" />




</android.support.constraint.ConstraintLayout>

