<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.eyesless.needmypuppy.MainActivity">

    <ImageView
        android:id="@+id/imageViewSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap"
        android:layout_marginRight="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/db_editText_sended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/catchem"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imageButton_find"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        android:layout_marginTop="8dp" />

    <ImageButton
        android:id="@+id/imageButton_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/db_editText_sended"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/db_editText_sended"
        app:srcCompat="@drawable/ic_search_black_24dp" />

    <TextView
        android:id="@+id/db_text_recived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foralllist"
        android:textSize="@dimen/text_size"
        android:gravity="right"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/db_editText_sended"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/button_gonext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resofsearch"
        android:textSize="@dimen/text_size_small"
        android:layout_marginRight="8dp"
        android:enabled="false"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.69" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline7"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />


</android.support.constraint.ConstraintLayout>
