<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.eyesless.needmypuppy.MainActivity">

    <ImageButton
        android:id="@+id/imageButton_aboutowner"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="spread"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="spread"
        app:srcCompat="@drawable/silhouette_hunting_dog_new"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/text_aboutowner"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline6"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/text_aboutowner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_block1"
        android:gravity="center"
        android:textSize="@dimen/text_size_small"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline6"
        android:layout_marginRight="8dp" />

    <ImageButton
        android:id="@+id/imageButton_aboutdog"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="spread"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="spread"
        app:srcCompat="@drawable/silhouette_jumping_dog"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/text_aboutdog"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/text_aboutdog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_block2"
        android:gravity="center"
        android:textSize="@dimen/text_size_small"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_forwhat"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="spread"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="spread"
        app:srcCompat="@drawable/silhouette_playing_dog"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/text_forwhat"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline6"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/text_forwhat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_block3"
        android:gravity="center"
        android:textSize="@dimen/text_size_small"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline6"
        android:layout_marginRight="8dp" />

    <ImageButton
        android:id="@+id/imageButton_morpho"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="spread"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="spread"
        app:srcCompat="@drawable/silhouette_pudel_dog"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/text_morpho"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_morpho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_block4"
        android:gravity="center"
        android:textSize="@dimen/text_size_small"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_gonext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_complete"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        android:layout_marginTop="16dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline9"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline10"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline11"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />


</android.support.constraint.ConstraintLayout>