<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.eyesless.needmypuppy.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_top"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="wrap"
            android:layout_height="wrap_content"
            android:text="@string/intro_about_morpho"
            android:textSize="@dimen/text_size"
            android:gravity="center"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp" />

        <TextView
            android:id="@+id/textView_numberOfBreeds_morpho"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="spread"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:gravity="center"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_top"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <Spinner
            android:id="@+id/spinner_hair"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="spread"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_numberOfBreeds_morpho"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <Spinner
            android:id="@+id/spinner_blackorwhite"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="spread"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintVertical_chainStyle="spread_inside"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_hair"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <Spinner
            android:id="@+id/spinner_size"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="spread"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintVertical_chainStyle="spread_inside"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_blackorwhite"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <CheckBox
            android:id="@+id/checkBox_exectlysize"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="wrap"
            android:text="@string/flag_exectly"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_size"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <CheckBox
            android:id="@+id/checkBox_noalergy"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="wrap"
            android:text="@string/flag_noalergy"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_exectlysize"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <CheckBox
            android:id="@+id/checkBox_addrare"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="wrap"
            android:text="@string/addrare"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_noalergy"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageButton
            android:id="@+id/button_complete"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="wrap"
            android:layout_height="wrap_content"
            android:text="@string/btn_complete"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/forward"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_addrare" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>